# simple-tga-reader

./: Cargo.toml  LICENSE
src/: lib.rs
